--- a/Views/Movies/Index.cshtml
+++ b/Views/Movies/Index.cshtml
@@ -1,4 +1,4 @@
-@model MvcMovie.Models.MovieGenreViewModel
+@model MvcMovie.Models.MovieFilterViewModel
 
 @{
     ViewData["Title"] = "Movies";
@@ -11,12 +11,19 @@
 </p>
 <form asp-controller="Movies" asp-action="Index" method="get">
     <p>
-
+        Genre:
         <select asp-for="MovieGenre" asp-items="Model.Genres">
             <option value="">All</option>
         </select>
 
-        <label>Title: <input type="text" asp-for="SearchString" /></label>
+        Year:
+        <select asp-for="MovieYear" asp-items="Model.Years">
+            <option value="">All</option>
+        </select>
+
+        Title:
+        <input type="text" asp-for="SearchString" />
+
         <input type="submit" value="Filter" />
     </p>
 </form>
